# CFPL

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
sample-source-codes/: 1.cfpl
src/: main.py  test.py  test.txt
src/lib/: ast.py  interpreter.py  lexer.py  nodeVisitor.py  parser.py  symbols.py  token.py  utils.py
src/sample-source-codes/: 1.cfpl  2.cfpl  factorial.cfpl  input.cfpl  multiple_ifs.cfpl  not.cfpl  output.cfpl  simple-while.cfpl  test1.cfpl  test2.cfpl  test3.cfpl  test4.cfpl  test6.cfpl  test7.cfpl  unary.cfpl
