[tool.poetry]
name = "cfpl"
version = "0.1.0"
description = ""
authors = ["Orlan Quijada <orlantquijada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8-pylint = "^0.1.1"
black = "^20.8b1"
isort = "^5.7.0"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
